# boids

./: .history  Cargo.toml  default.nix  flake.nix  index.html  rust-toolchain.toml
docs/: boids-9925e5115f0855b6.js  boids-c6e4ec13186d6343.js  boids-c6e4ec13186d6343_bg.wasm  boids-ecdd57a3a8d80e2e_bg.wasm  index.html
src/: boid.rs  config.rs  main.rs  nearest_neightbor.rs  simulation.rs  vector.rs
