[package]
edition = "2021"
name = "boids"
publish = false
version = "0.1.0"

[[bin]]
name = "boids"
path = "src/main.rs"

[dependencies]
pinwheel = "0.2.0"
wasm-bindgen = "=0.2.73"
gloo-console = "0.2.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Window",
  "CanvasRenderingContext2d",
  "ImageBitmap"
]
