[package]
edition = "2021"
name = "boids"
publish = false
version = "0.1.0"

[[bin]]
name = "boids"
path = "src/main.rs"

[dependencies]
pinwheel = "0.2.0"
wasm-bindgen = "=0.2.81"
gloo-console = "0.2.1"
futures = "0.3.21"
wasm-bindgen-futures = "0.4.31"
gloo-timers = {version = "0.2.4", features = ["futures"]}
ordered-float = "3.0.0"
futures-signals = "0.3.22"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
fnv = "1.0.7"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Window",
  "CanvasRenderingContext2d",
  "ImageBitmap"
]
